--- a/main.css
+++ b/main.css
@@ -4,9 +4,15 @@ font-family: passiontea;
 src: url(PassionTea.ttf);
 }
 
+@font-face
+{
+font-family: caviardreams;
+src: url(CaviarDreams.ttf);
+}
+
 .main
 {
-width: 1000px;
+width: 900px;
 margin-left: auto;
 margin-right: auto;
 display: block;
@@ -15,8 +21,14 @@ font-family: passiontea
 
 h1
 {
-color: #666;  
-font-size: 30px;
+color: #666; 
+font-size: 20px;
+}
+
+h1:hover
+{
+color: #941100;  
+font-size: 20px;
 }
 
 #header {
@@ -76,18 +88,18 @@ background-color: #A9A9A9;
 color: #941100
 }
 
-#col1 {
+.col1 {
+font-size: 15px;
 float: left;
-display: block;
-text-align: left;
-width: 50%;
+width: 30%;
+font-family: caviardreams;
 }
 
-#col2 {
+.col2 {
+font-size: 15px;
 float: right;
-display: block;
-text-align: right;
-width: 100%;
+width: 40%;
+font-family: caviardreams;
 }
 
 #line {
@@ -105,6 +117,15 @@ width: 98%;
 position: relative; 
 top: 1px;
 width: 30px;
+}
+
+.list li {
+display: inline-block;
+background: #A9A9A9;
+color: #FFF;
+font-size: 12px;    
+padding: 4px 8px;
+margin: 0 8px 10px 0;
 }
 
 a:link {text-decoration:none; color: #666;}
