--- a/main.css
+++ b/main.css
@@ -128,6 +128,22 @@ padding: 4px 8px;
 margin: 0 8px 10px 0;
 }
 
+#footer{
+text-align:center; 
+margin: 20px; 
+font-family: passiontea; 
+color: #666; 
+position: absolute; 
+bottom: 0; 
+width: 100%; 
+clear: both; 
+margin-bottom: 24px;
+}
+
+#footer:hover{
+color: #941100;
+}
+
 a:link {text-decoration:none; color: #666;}
 a:visited {text-decoration:none; color: #666;}
 a:hover {text-decoration:none; color: #666;}
