--- a/main.css
+++ b/main.css
@@ -149,6 +149,15 @@ font-size: 30px;
 text-align: center;
 }
 
+#eyestiny:hover{
+color: #941100;
+}
+
+#eyestiny{
+font-size: 15px;
+text-align: center;
+}
+
 #eyes:hover{
 color: #941100;
 }
