--- a/main.css
+++ b/main.css
@@ -15,13 +15,35 @@ a:visited {text-decoration:none; color: #666;}
 a:hover {text-decoration:none; color: #666;}
 a:active {text-decoration:none; color: #666;}
 
+.layer1{
+position:relative;
+z-index:2;
+}
+
+.layer2{
+position:relative;
+z-index:1;  
+}
+
 .main
+{
+width: 800px;
+margin-left: auto;
+margin-right: auto;
+display: block;
+font-family: passiontea;
+padding: 0px 0px 0px 0px;
+}
+
+#aboutmain
 {
 width: 900px;
 margin-left: auto;
 margin-right: auto;
+margin-top: 70px;
 display: block;
-font-family: passiontea
+font-family: passiontea;
+padding: 0px 0px 0px 0px;
 }
 
 h1
@@ -52,14 +74,35 @@ margin: 0px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
 }
 
-#header {
+#myheader {
 position: static;
-margin-left: auto;
-margin-right: auto;
-width: 800px;
 overflow: auto;
 display: block;
 padding: 0px 0px 30px;
+}
+
+#myfooter{
+text-align:center; 
+font-family: passiontea; 
+color: #666; 
+clear: both;
+}
+
+#header, #footer {
+position: fixed;
+display: block;
+width: 100%;
+padding: 0 0 0 0;
+background: #fff;
+}
+
+#header{
+height: 130px;
+top:0px;
+}
+#footer{
+bottom:0px;
+height: 50px;
 }
 
 #iamannielin {
@@ -258,7 +301,7 @@ padding-right:  3px;
  
 #navigation a {
 text-decoration: none;
-color: #ccc;
+color: #666;
 font: 50px/1 passiontea;
 -webkit-transition: all 0.4s ease;
 -moz-transition: all 0.4s ease;
@@ -268,7 +311,7 @@ transition: all 0.4s ease;
 }
  
 #navigation a:hover {
-color: #666;
+color: #ccc;
 }
 
 #line {
@@ -290,21 +333,6 @@ left: 775px;
 width: 20px;
 height: 20px;
 }
-
-#footer{
-text-align:center; 
-margin: 20px; 
-font-family: passiontea; 
-color: #666;  
-width: 100%; 
-clear: both; 
-margin-bottom: 24px;
-}
-
-#footer:hover{
-color: #941100;
-}
-
 
 .col1about {
 float: left;
@@ -359,7 +387,7 @@ float: left;
 width: 30%;
 font-family: caviardreams;
 position: relative; 
-top: 150px;
+top: 115px;
 }
 
 .col2blog {
