most bugs fixed

--- a/main.css
+++ b/main.css
@@ -502,6 +502,11 @@ margin-top: 150px;
 margin-bottom: 100px;
 position:relative
 }
+.workblocks{
+padding: 0px 0px 0px 0px;
+margin: 0px 0px 0px 0px;
+position: relative;
+}
 
 .workimage:hover{
 opacity: 0.3;
@@ -629,4 +634,21 @@ right: 82px;
 background-image: url(images/hometable/blogtable.png);
 background-size: 55px 30px;
 background-repeat:no-repeat;
+}
+
+.frame-container {
+    position: relative;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    height: 350px;
+    width: 620px;
+    overflow: hidden;
+}
+
+.frame-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
