--- a/main.css
+++ b/main.css
@@ -505,8 +505,29 @@ position:relative
 .workblocks{
 padding: 0px 0px 0px 0px;
 margin: 0px 0px 0px 0px;
-position: relative;
+height: 190px;
+width: 190px;
+overflow: hidden;
+position:relative;
+display: table-cell;
 }
+
+.workblocks img {
+position: absolute;
+top:0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+.workblocks iframe {
+position: absolute;
+top:0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 
 .workimage:hover{
 opacity: 0.3;
@@ -531,7 +552,7 @@ margin: 0px 0px 0px 0px;
 
 #workdescription li {
 text-align: center;
-width: 185px;
+width: 193px;
 display: inline-block;
 background: #ccc;
 color: #fff;
