--- a/main.css
+++ b/main.css
@@ -516,16 +516,16 @@ display: table-cell;
 position: absolute;
 top:0;
 left: 0;
-width: 100%;
-height: 100%;
+height: 190px;
+width: 190px;
 }
 
 .workblocks iframe {
 position: absolute;
 top:0;
 left: 0;
-width: 100%;
-height: 100%;
+height: 190px;
+width: 190px;
 }
 
 
