--- a/css/new.css
+++ b/css/new.css
@@ -15,8 +15,23 @@
 	src: url(/fonts/CaviarDreamsBold.ttf);
 }
 
-#footer {
+.head-foot {
 	background-color: #fff;
 	border: none;
+}
+
+hr { 
+  border-top: 1.5px dashed #8c8b8b; 
+} 
+
+hr:after { 
+  content: '\002702'; 
+  display: inline-block; 
+  position: relative; 
+  top: -13px; 
+  padding: 0 3px; 
+  background: #fff; 
+  color: #8c8b8b; 
+  font-size: 18px; 
 }
 
