--- a/css/new.css
+++ b/css/new.css
@@ -74,3 +74,15 @@ margin: 0 0px 4px 0;
 margin: 0px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
 }
+
+
+
+
+@media only screen and (max-height: 500px) {
+  .non-mobile {display: none;}
+}
+
+
+
+
+
