--- a/css/new.css
+++ b/css/new.css
@@ -1,10 +1,9 @@
 /* Main CSS sheet for www.anniel.in 16a085 */
 
+.mobile {display: none;}
+
 @media only screen and (max-height: 500px) {
   .non-mobile {display: none;}
-}
-
-@media only screen and (min-height: 500px) {
   .mobile {display: none;}
 }
 
