--- a/css/new.css
+++ b/css/new.css
@@ -12,11 +12,23 @@
 }
 
 /* Text Attributes */
+
+.no-margin {
+	margin: 0px 0px 5px 0px;
+}
+
 h1 {
 	font-family: caviardreams;
 	font-weight: 900;
 	color: #aaa; 
 	font-size: 20px;
+}
+
+h2 {
+	font-family: caviardreams;
+	font-weight: 500;
+	color: #ccc; 
+	font-size: 15px;
 }
 
 p {  
@@ -48,10 +60,10 @@ hr:after {
 }
 
 /* Links */
-a:link {text-decoration:none; color: #666;}
-a:visited {text-decoration:none; color: #666;}
+a:link {text-decoration:none;}
+a:visited {text-decoration:none;}
 a:hover {text-decoration:none; color: #16a085;}
-a:active {text-decoration:none; color: #666;}
+a:active {text-decoration:none;}
 
 /* The cog in the middle of header */
 #cog:link {text-decoration:none; color: #16a085;}
@@ -65,7 +77,7 @@ display: inline-block;
 font-family: caviardreams;
 background: #aaa;
 color: #fff;
-font-size: 15px; 
+font-size: 12px; 
 padding: 2px 2px;
 margin: 0 0px 4px 0;
 }
@@ -73,6 +85,30 @@ margin: 0 0px 4px 0;
 .list {
 margin: 0px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
+}
+
+/* Lists */
+.btn {
+    text-transform: uppercase;
+    font-family: caviardreams;
+    font-weight: 900;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.btn-default {
+    border: 1px solid #16a085;
+    color: #16a085;
+    background-color: transparent;
+}
+
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #16a085;
+    outline: 0;
+    color: #fff;
+    background-color: #16a085;
 }
 
 
