--- a/css/new.css
+++ b/css/new.css
@@ -120,29 +120,8 @@ padding: 0px 0px 0px 0px;
     box-shadow: none;
 }
 
-.portfolio-modal .modal-content h2 {
-    margin-bottom: 15px;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content p {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content p.item-intro {
-    margin: 20px 0 30px;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    font-style: italic;
-}
-
-.portfolio-modal .modal-content ul.list-inline {
-    margin-top: 0;
-    margin-bottom: 30px;
-}
-
 .portfolio-modal .modal-content img {
-    margin-bottom: 30px;
+    margin: 0 auto;
 }
 
 .portfolio-modal .close-modal {
@@ -178,9 +157,4 @@ padding: 0px 0px 0px 0px;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
-}
-
-.portfolio-modal .modal-backdrop {
-    display: none;
-    opacity: 0;
 }
