--- a/css/new.css
+++ b/css/new.css
@@ -158,3 +158,8 @@ padding: 0px 0px 0px 0px;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
+.coffeelink i:active{
+	text-decoration:none;
+	border:none;
+}
