--- a/css/new.css
+++ b/css/new.css
@@ -159,7 +159,8 @@ padding: 0px 0px 0px 0px;
     transform: rotate(90deg);
 }
 
-.coffeelink i:active{
+.coffeelink i{
 	text-decoration:none;
 	border:none;
+    background:none;
 }
